Grease Pencil - sculpt Mode General template not working on second load #75141

Closed
opened 2020-03-27 19:48:06 +01:00 by dupoxy · 11 comments
Contributor

System Information
Operating system: Darwin-17.7.0-x86_64-i386-64bit 64 Bits
Graphics card: NVIDIA GeForce GTX 680MX OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.32.0 355.11.10.10.40.102

Blender Version
Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-03-26 23:49, hash: f1fb3eb975
Worked: 2.82a
Short description of error
Grease Pencil - sculpt Mode General template not working on second load

Exact steps for others to reproduce the error

  1. File > Defaults > Load Factory settings
  2. File > New > General
  3. redo File > New > General
  4. add a grease pencil Stroke object
  5. go to grease pencil Sculpt Mode
    none of the brushes are working

file:
grease sculpt bug.blend
log:
terminal-output.txt
video:
2020-03-27 19-18-17.mp4

more info:
If in step 2. and 3. you replace "General" by "2D Animation", "Sculping", "VFX" or "Video Editing", all grease pencil Sculpt Mode brushes work fine.

workaround

**System Information** Operating system: Darwin-17.7.0-x86_64-i386-64bit 64 Bits Graphics card: NVIDIA GeForce GTX 680MX OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-10.32.0 355.11.10.10.40.102 **Blender Version** Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-03-26 23:49, hash: `f1fb3eb975` Worked: 2.82a **Short description of error** Grease Pencil - sculpt Mode General template not working on second load **Exact steps for others to reproduce the error** 1. File > Defaults > Load Factory settings 2. File > New > General 3. redo File > New > General 4. add a grease pencil Stroke object 5. go to grease pencil Sculpt Mode none of the brushes are working file: [grease sculpt bug.blend](https://archive.blender.org/developer/F8430753/grease_sculpt_bug.blend) log: [terminal-output.txt](https://archive.blender.org/developer/F8430755/terminal-output.txt) video: [2020-03-27 19-18-17.mp4](https://archive.blender.org/developer/F8430763/2020-03-27_19-18-17.mp4) more info: If in step 2. and 3. you replace "General" by "2D Animation", "Sculping", "VFX" or "Video Editing", all grease pencil Sculpt Mode brushes work fine. [workaround ](https://developer.blender.org/T75141#899072)
Author
Contributor

Added subscriber: @dupoxy

Added subscriber: @dupoxy

Added subscriber: @antoniov

Added subscriber: @antoniov

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

This is due the refactor... just reset the brushes.

image.png

This is due the refactor... just reset the brushes. ![image.png](https://archive.blender.org/developer/F8430861/image.png)
Author
Contributor

Thanks
Yes reset all brushes solved the problem.
but why do I need to do this.
Every time I do File > New > General
l need to reset the brushes ?

Thanks Yes reset all brushes solved the problem. but why do I need to do this. Every time I do File > New > General l need to reset the brushes ?
Author
Contributor

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@dupoxy Yes, I know... I will try to find a solution.

@ideasman42 How can I call a versioning code in default template? I have seen the versioning is called with any template except default.

@dupoxy Yes, I know... I will try to find a solution. @ideasman42 How can I call a versioning code in default template? I have seen the versioning is called with any template except default.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez self-assigned this 2020-04-10 10:45:31 +02:00

This issue was referenced by 03dda57678

This issue was referenced by 03dda57678d18d7a922c57cdd8a6e528389edbeb

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75141
No description provided.