Fix T75141: Default template versioning error for grease pencil

The versioning was done only for template because the code was after a return and never was executed for default scene.